Get repo from github and git lab

--- a/009-rxjs/package.json
+++ b/009-rxjs/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/netology-code/ndtnf-homeworks/tree/master/009-rxjs#readme",
   "dependencies": {
     "@types/karma": "3.0.2",
-    "rxjs": "6.5.1"
+    "rxjs": "^6.5.1"
   },
   "devDependencies": {
     "@types/jasmine": "3.3.12",
